@@ -3,6 +3,8 @@
 
 - Pressing Enter while zooming activates the selected zoom region.
 
+- Add "Reset fractal" menu commmand.
+
 0.31
 ----
 
